--- a/trzeciemysli.ipynb
+++ b/trzeciemysli.ipynb
@@ -324,6 +324,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Widzimy, że:\n",
+    "$$PDP^T + \\tilde{z}\\tilde{z}^T = HH\\cdot PAP^T\\cdot HH^T$$\n",
+    "gdzie $\\tilde{z} = HH\\cdot Pz = \\begin{bmatrix} I & 0 \\\\ 0 & H\\end{bmatrix} Pz$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
