Zmieniono trzeciemysli.ipynb

--- a/trzeciemysli.ipynb
+++ b/trzeciemysli.ipynb
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zdefiniujmy jeszcze blokową macierz $HH = \\begin{bmatrix} I & 0 \\\\ 0 & H\\end{bmatrix}$ i na niej sprawdźmy kilka działań.\n",
+    "Zdefiniujmy jeszcze blokową macierz $\\mathbb{H} = \\begin{bmatrix} I & 0 \\\\ 0 & H\\end{bmatrix}$ i na niej sprawdźmy kilka działań. W kodzie poniżej mamy $\\mathbb{H} = $ HH.\n",
     "\n",
     "Uwaga: poniżej cały czas działamy na macierzach spermutowanych!"
    ]
@@ -328,8 +328,8 @@
    "metadata": {},
    "source": [
     "Widzimy, że:\n",
-    "$$PDP^T + \\tilde{z}\\tilde{z}^T = HH\\cdot PAP^T\\cdot HH^T$$\n",
-    "gdzie $\\tilde{z} = HH\\cdot Pz = \\begin{bmatrix} I & 0 \\\\ 0 & H\\end{bmatrix} Pz$."
+    "$$PDP^T + \\tilde{z}\\tilde{z}^T = \\mathbb{H}\\cdot PAP^T\\cdot \\mathbb{H}^T$$\n",
+    "gdzie $\\tilde{z} = \\mathbb{H}\\cdot Pz = \\begin{bmatrix} I & 0 \\\\ 0 & H\\end{bmatrix} Pz$. Ten fakt pokazuje komórka poniżej:"
    ]
   },
   {
@@ -356,7 +356,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Teraz: zgodnie z notatkami, powinno się łatwo dać odzyskać wartości własne i wektory własne macierzy $H\\hat{A} H^T$."
+    "Wracamy do tego, o czym mówiliśmy wcześniej - zapominamy na chwilę o macierzy $\\mathbb{H}$.\n",
+    "\n",
+    "Zgodnie z notatkami, powinno się łatwo dać odzyskać wartości własne i wektory własne macierzy $H\\hat{A} H^T$. Jak?"
    ]
   }
  ],
