--- a/trzeciemysli.ipynb
+++ b/trzeciemysli.ipynb
@@ -360,6 +360,121 @@
     "\n",
     "Zgodnie z notatkami, powinno się łatwo dać odzyskać wartości własne i wektory własne macierzy $H\\hat{A} H^T$. Jak?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.84757415,  0.53067699,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.53067699, -0.84757415,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  1.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  1.        ]])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -0.0931,  -0.2743,   0.4381,   0.6734,   0.1196],\n",
+       "       [ -0.2743,   4.6821,  -7.1107, -10.9298,  -1.9412],\n",
+       "       [  0.4381,  -7.1107,  11.5869,  17.4566,   3.1004],\n",
+       "       [  0.6734, -10.9298,  17.4566,  27.2124,   4.7656],\n",
+       "       [  0.1196,  -1.9412,   3.1004,   4.7656,   1.3364]])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ahat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-9.31000000e-02,  0.00000000e+00, -5.16886932e-01,\n",
+       "         6.73400000e-01,  1.19600000e-01],\n",
+       "       [ 0.00000000e+00,  2.30000000e-01,  0.00000000e+00,\n",
+       "         0.00000000e+00,  0.00000000e+00],\n",
+       "       [-5.16886932e-01, -1.10899829e-15,  1.60390000e+01,\n",
+       "        -2.05959562e+01, -3.65796905e+00],\n",
+       "       [ 6.73400000e-01,  0.00000000e+00, -2.05959562e+01,\n",
+       "         2.72124000e+01,  4.76560000e+00],\n",
+       "       [ 1.19600000e-01,  0.00000000e+00, -3.65796905e+00,\n",
+       "         4.76560000e+00,  1.33640000e+00]])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HAhatHt = H @ Ahat @ H.T\n",
+    "HAhatHt[np.abs(HAhatHt) < 10**(-15)] = 0\n",
+    "# te elementy są = 0, ale błędy numeryczne powodują tam wartości rzędu 10^(-17)\n",
+    "HAhatHt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.23,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  1.13,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  , -0.11,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.23,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.23,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.38,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.49]])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PDPt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$0.23$ i $1.13$ są wartościami własnymi, tego nie ruszamy. Znamy wektory własne - są to odpowiednie $e_i$.\n",
+    "Te dwa kolejne $0.23$ też są wartościami własnymi, ale jeszcze nie wiemy jak wyznaczać wektory własne.\n",
+    "Pozostałe liczby na diagonali nie są już wartościami własnymi, tam będzie działać \"Przypadek 3.\" z notatek."
+   ]
   }
  ],
  "metadata": {
