Dodano poprawne tworzenie macierzy H

--- a/Pomysł 14.06/czwartemysli.ipynb
+++ b/Pomysł 14.06/czwartemysli.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -123,57 +123,123 @@
     }
    ],
    "source": [
-    "dictforH = {}\n",
+    "H = np.eye(N)\n",
     "for key, val in ce.items():\n",
-    "    \n",
-    "    newkey = tuple(val)\n",
-    "    \n",
-    "    if dictforH.get(newkey) is None:\n",
-    "        dictforH[newkey] = None\n",
     "        \n",
     "    if len(val) > 1:\n",
     "        print(f\"Blok odpowiadający di={key} na indeksach {val}\")\n",
+    "        \n",
     "        i = val[0]\n",
     "        k = len(val)\n",
-    "        temp_zhat = z[val]\n",
     "        \n",
-    "        u = np.copy(temp_zhat)\n",
+    "        u = z[val]\n",
     "        u[-1] += np.linalg.norm(u)\n",
     "        v = u/np.linalg.norm(u)\n",
     "        Hi = np.eye(k) - 2 * v.reshape((k, 1)) @ v.reshape((1, k))\n",
     "        \n",
-    "        dictforH[newkey] = Hi\n",
+    "        for row in range(i, i+k):\n",
+    "            for col in range(i, i+k):\n",
+    "                H[row, col] = Hi[row-i, col-i]\n",
     "    else:\n",
     "        print(f\"Pojedyncze di={key} na indeksie {val}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(0,): None,\n",
-       " (1, 2, 3): array([[ 0.84757415,  0.        ,  0.53067699],\n",
-       "        [ 0.        ,  1.        ,  0.        ],\n",
-       "        [ 0.53067699,  0.        , -0.84757415]]),\n",
-       " (4,): None,\n",
-       " (5,): None,\n",
-       " (6,\n",
-       "  7): array([[ 0.99333102, -0.11529735],\n",
-       "        [-0.11529735, -0.99333102]]),\n",
-       " (8,): None}"
+       "array([[ 1.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.84757415,  0.        ,  0.53067699,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  1.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.53067699,  0.        , -0.84757415,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  1.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         1.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.99333102, -0.11529735,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        , -0.11529735, -0.99333102,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  1.        ]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dictforH"
+    "H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.11,  0.23,  0.23,  0.23,  0.38,  0.49,  1.13,  1.13,  1.95])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.diag(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.  , -2.11,  0.  ,  3.37,  5.18,  0.92,  0.13,  1.12, -0.21])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.        ,  0.        , -3.97605332,  5.18      ,\n",
+       "        0.92      ,  0.        , -1.1275194 , -0.21      ])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "H @ z"
    ]
   }
  ],
