Dodano przypadek2.py

--- a/Pomysł 14.06/czwartemysli.ipynb
+++ b/Pomysł 14.06/czwartemysli.ipynb
@@ -241,6 +241,87 @@
    "source": [
     "H @ z"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pojedyncze di=-0.11 na indeksie [0].\n",
+      "Blok odpowiadający di=0.23 na indeksach [1, 2, 3]\n",
+      "Pojedyncze di=0.38 na indeksie [4].\n",
+      "Pojedyncze di=0.49 na indeksie [5].\n",
+      "Blok odpowiadający di=1.13 na indeksach [6, 7]\n",
+      "Pojedyncze di=1.95 na indeksie [8].\n"
+     ]
+    }
+   ],
+   "source": [
+    "from przypadek2 import *\n",
+    "\n",
+    "H, z = case_two(D, z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.84757415,  0.        ,  0.53067699,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  1.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.53067699,  0.        , -0.84757415,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  1.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         1.        ,  0.        ,  0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.99333102, -0.11529735,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        , -0.11529735, -0.99333102,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  1.        ]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.  , -2.11,  0.  ,  3.37,  5.18,  0.92,  0.13,  1.12, -0.21])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z"
+   ]
   }
  ],
  "metadata": {
