Zmodyfikowano czwartemysli.ipynb

--- a/Pomysł 14.06/czwartemysli.ipynb
+++ b/Pomysł 14.06/czwartemysli.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rozpoczynamy od przypadku nr 2:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -244,19 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pojedyncze di=-0.11 na indeksie [0].\n",
-      "Blok odpowiadający di=0.23 na indeksach [1, 2, 3]\n",
-      "Pojedyncze di=0.38 na indeksie [4].\n",
-      "Pojedyncze di=0.49 na indeksie [5].\n",
-      "Blok odpowiadający di=1.13 na indeksach [6, 7]\n",
-      "Pojedyncze di=1.95 na indeksie [8].\n"
+     "ename": "NameError",
+     "evalue": "name 'case_two' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[53], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprzypadek2\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m----> 3\u001b[0m H, z \u001b[38;5;241m=\u001b[39m \u001b[43mcase_two\u001b[49m(D, z)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'case_two' is not defined"
      ]
     }
    ],
@@ -320,6 +326,50 @@
     }
    ],
    "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teraz dopiero odpalamy przypadek nr 1 -- ale uwaga! Robimy to na macierzy $HAH^T = D + \\tilde{z}\\tilde{z}^T$!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.  , -2.11,  0.  ,  3.37,  5.18,  0.92,  0.13,  1.12, -0.21])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assert D.shape[0] == D.shape[1]\n",
+    "assert D.shape[0] == z.shape[0]\n",
+    "assert np.array_equal(D, np.diag(np.diag(D)))\n",
+    "\n",
+    "N = D.shape[0]\n",
+    "\n",
+    "z = H @ z # Macierz D pozostaje bez zmian\n",
+    "\n",
+    "ind = sum(z == 0)\n",
+    "perm = (z == 0)\n",
+    "\n",
+    "P = np.eye(N)\n",
+    "P = np.block([\n",
+    "    [P[perm, :][:, perm], P[perm, :][:, ~perm]],\n",
+    "    [P[~perm, :][:, perm], P[~perm, :][:, ~perm]]\n",
+    "])\n",
+    "\n",
     "z"
    ]
   }
