--- a/Pomysł 14.06/czwartemysli.ipynb
+++ b/Pomysł 14.06/czwartemysli.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  1.95]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "array([ 0.  , -2.11,  0.  ,  3.37,  5.18,  0.92,  0.13,  1.12, -0.21])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "{-0.11: [0], 0.23: [1, 2, 3], 0.38: [4], 0.49: [5], 1.13: [6, 7], 1.95: [8]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "         0.        ,  0.        ,  0.        ,  1.        ]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "array([-0.11,  0.23,  0.23,  0.23,  0.38,  0.49,  1.13,  1.13,  1.95])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "array([ 0.  , -2.11,  0.  ,  3.37,  5.18,  0.92,  0.13,  1.12, -0.21])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "        0.92      ,  0.        , -1.1275194 , -0.21      ])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,22 +251,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'case_two' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[53], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprzypadek2\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m----> 3\u001b[0m H, z \u001b[38;5;241m=\u001b[39m \u001b[43mcase_two\u001b[49m(D, z)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'case_two' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pojedyncze di=-0.11 na indeksie [0].\n",
+      "Blok odpowiadający di=0.23 na indeksach [1, 2, 3]\n",
+      "Pojedyncze di=0.38 na indeksie [4].\n",
+      "Pojedyncze di=0.49 na indeksie [5].\n",
+      "Blok odpowiadający di=1.13 na indeksach [6, 7]\n",
+      "Pojedyncze di=1.95 na indeksie [8].\n"
      ]
     }
    ],
    "source": [
+    "from importlib import reload\n",
+    "import przypadek2\n",
+    "reload(przypadek2)\n",
     "from przypadek2 import *\n",
     "\n",
     "H, z = case_two(D, z)"
@@ -274,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +304,7 @@
        "         0.        ,  0.        ,  0.        ,  1.        ]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +324,7 @@
        "array([ 0.  , -2.11,  0.  ,  3.37,  5.18,  0.92,  0.13,  1.12, -0.21])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,16 +342,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.  , -2.11,  0.  ,  3.37,  5.18,  0.92,  0.13,  1.12, -0.21])"
+       "array([ 0.        ,  0.        ,  0.        , -3.97605332,  5.18      ,\n",
+       "        0.92      ,  0.        , -1.1275194 , -0.21      ])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,18 +364,377 @@
     "\n",
     "N = D.shape[0]\n",
     "\n",
-    "z = H @ z # Macierz D pozostaje bez zmian\n",
+    "tildez = H @ z # Macierz D pozostaje bez zmian\n",
+    "tildez"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True, False, False, False,  True, False, False])"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = D + tildez.reshape((N, 1))@tildez.reshape((1, N))\n",
     "\n",
-    "ind = sum(z == 0)\n",
-    "perm = (z == 0)\n",
-    "\n",
+    "nzeros = sum(np.isclose(tildez, 0, atol=1e-15)) # liczba zer w \"z\"\n",
+    "perm = np.isclose(tildez, 0, atol=1e-15) # permutacja przestawiająca zera w \"z\" na początek\n",
+    "perm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nzeros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# macierz permutacji:\n",
     "P = np.eye(N)\n",
-    "P = np.block([\n",
-    "    [P[perm, :][:, perm], P[perm, :][:, ~perm]],\n",
-    "    [P[~perm, :][:, perm], P[~perm, :][:, ~perm]]\n",
-    "])\n",
-    "\n",
+    "P = np.vstack((P[perm], P[~perm]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.        ,  0.        ,  0.        , -3.97605332,\n",
+       "        5.18      ,  0.92      , -1.1275194 , -0.21      ])"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pz = P @ tildez\n",
+    "pz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.11,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.23,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.23,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  1.13,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.23,  0.  ,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.38,  0.  ,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.49,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  1.13,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  1.95]])"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pdpt = P @ D @ P.T\n",
+    "pdpt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -0.11      ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ],\n",
+       "       [  0.        ,   0.23      ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ],\n",
+       "       [  0.        ,   0.        ,   0.23      ,   0.        ,\n",
+       "          0.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ],\n",
+       "       [  0.        ,   0.        ,   0.        ,   1.13      ,\n",
+       "          0.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ],\n",
+       "       [  0.        ,   0.        ,   0.        ,   0.        ,\n",
+       "         16.039     , -20.5959562 ,  -3.65796905,   4.48307726,\n",
+       "          0.8349712 ],\n",
+       "       [  0.        ,   0.        ,   0.        ,   0.        ,\n",
+       "        -20.5959562 ,  27.2124    ,   4.7656    ,  -5.8405505 ,\n",
+       "         -1.0878    ],\n",
+       "       [  0.        ,   0.        ,   0.        ,   0.        ,\n",
+       "         -3.65796905,   4.7656    ,   1.3364    ,  -1.03731785,\n",
+       "         -0.1932    ],\n",
+       "       [  0.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          4.48307726,  -5.8405505 ,  -1.03731785,   2.4013    ,\n",
+       "          0.23677907],\n",
+       "       [  0.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.8349712 ,  -1.0878    ,  -0.1932    ,   0.23677907,\n",
+       "          1.9941    ]])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "papt = P @ A @ P.T\n",
+    "papt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Anew = papt[nzeros:, nzeros:]\n",
+    "Dnew = pdpt[nzeros:, nzeros:]\n",
+    "znew = pz[nzeros:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 16.039     , -20.5959562 ,  -3.65796905,   4.48307726,\n",
+       "          0.8349712 ],\n",
+       "       [-20.5959562 ,  27.2124    ,   4.7656    ,  -5.8405505 ,\n",
+       "         -1.0878    ],\n",
+       "       [ -3.65796905,   4.7656    ,   1.3364    ,  -1.03731785,\n",
+       "         -0.1932    ],\n",
+       "       [  4.48307726,  -5.8405505 ,  -1.03731785,   2.4013    ,\n",
+       "          0.23677907],\n",
+       "       [  0.8349712 ,  -1.0878    ,  -0.1932    ,   0.23677907,\n",
+       "          1.9941    ]])"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Anew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 16.039     , -20.5959562 ,  -3.65796905,   4.48307726,\n",
+       "          0.8349712 ],\n",
+       "       [-20.5959562 ,  27.2124    ,   4.7656    ,  -5.8405505 ,\n",
+       "         -1.0878    ],\n",
+       "       [ -3.65796905,   4.7656    ,   1.3364    ,  -1.03731785,\n",
+       "         -0.1932    ],\n",
+       "       [  4.48307726,  -5.8405505 ,  -1.03731785,   2.4013    ,\n",
+       "          0.23677907],\n",
+       "       [  0.8349712 ,  -1.0878    ,  -0.1932    ,   0.23677907,\n",
+       "          1.9941    ]])"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dnew + znew.reshape((N-nzeros, 1))@znew.reshape((1, N-nzeros))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.  , -2.11,  0.  ,  3.37,  5.18,  0.92,  0.13,  1.12, -0.21])"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.        ,  0.        , -3.97605332,  5.18      ,\n",
+       "        0.92      ,  0.        , -1.1275194 , -0.21      ])"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tildez"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib import reload\n",
+    "import przypadek1\n",
+    "reload(przypadek1)\n",
+    "from przypadek1 import *\n",
+    "\n",
+    "Dnew, znew, P, nzeros = case_one(D, tildez)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.23, 0.  , 0.  , 0.  , 0.  ],\n",
+       "       [0.  , 0.38, 0.  , 0.  , 0.  ],\n",
+       "       [0.  , 0.  , 0.49, 0.  , 0.  ],\n",
+       "       [0.  , 0.  , 0.  , 1.13, 0.  ],\n",
+       "       [0.  , 0.  , 0.  , 0.  , 1.95]])"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dnew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3.97605332,  5.18      ,  0.92      , -1.1275194 , -0.21      ])"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "znew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nzeros"
    ]
   }
  ],
