--- a/Pomysł 14.06/piatemysli.ipynb
+++ b/Pomysł 14.06/piatemysli.ipynb
@@ -28,7 +28,7 @@
     "# Teraz trzeba rozwiązać pełne zadanie własne macierzy D^2 + z*z^T\n",
     "# W tym celu stworzymy sobie inną macierz diagonalną D oraz inny wektor z\n",
     "D = np.diag([-0.11, 0.23, 0.23, 0.23, 0.38, 0.49, 1.13, 1.13, 1.95])\n",
-    "z = np.array([0., -2.11, 0, 3.37, 5.18, 0.92, 0.13, 1.12, -0.21])"
+    "z = np.array([0., -2.11, 0., 3.37, 5.18, 0.92, 0.13, 1.12, -0.21])"
    ]
   },
   {
@@ -91,7 +91,9 @@
     "# Przypadek 1:\n",
     "Zwracamy macierz diagonalną $D$ t.że $d_1 < ...< d_N$ i wektor $z$ t.że $\\forall i: z_i \\neq 0$.\n",
     "\n",
-    "Innymi słowy, $D$ i $z$ spełniają kryteria Przypadku 3."
+    "Innymi słowy, $D$ i $z$ spełniają kryteria Przypadku 3.\n",
+    "\n",
+    "Uwaga: słownik $eigendict$ przechowuje w sobie wektory i wartości własne macierzy $HAH^T$."
    ]
   },
   {
@@ -257,6 +259,14 @@
    ],
    "source": [
     "nzeros"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Przypadek 3:\n",
+    "Rozwiązujemy zadanie z macierzą $D_{new}$ i wektorem $z_{new}$. Wypełniamy do końca słownik $eigendict$, który przechowuje w sobie wektory i wartości własne maciery $HAH^T$. Potem, gdy słownik będzie już wypełniony, używamy macierzy $H$, żeby odzyskać wektory i wartości własne macierzy $A$."
    ]
   }
  ],
