Dodano opisy pomocne w dalszej pracy

--- a/Pomysł 14.06/piatemysli.ipynb
+++ b/Pomysł 14.06/piatemysli.ipynb
@@ -93,7 +93,8 @@
     "\n",
     "Innymi słowy, $D$ i $z$ spełniają kryteria Przypadku 3.\n",
     "\n",
-    "Uwaga: słownik $eigendict$ przechowuje w sobie wektory i wartości własne macierzy $HAH^T$."
+    "Uwaga: słownik $eigendict$ przechowuje w sobie wektory i wartości własne macierzy $HAH^T$.\n",
+    "Gdy $(\\lambda, v)$ jest parą własną $HAH^T$, to $(\\lambda, H^Tv)$ jest parą własną $A$."
    ]
   },
   {
