Działa SVD macierzy A

--- a/Pomysł 14.06/szostemysli.ipynb
+++ b/Pomysł 14.06/szostemysli.ipynb
@@ -70,31 +70,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Poniższy chunk pokazuje, że mamy $PHAH^TP^T = U\\Sigma U^{-1}$, czyli znamy wszystkie wektory i wartości własne macierzy $PHAH^TP^T$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ True,  True,  True,  True,  True,  True,  True,  True,  True],\n",
-       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True],\n",
-       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True],\n",
-       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True],\n",
-       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True],\n",
-       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True],\n",
-       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True],\n",
-       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True],\n",
-       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True]])"
+       "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.isclose(P @ H @ A @ H.T @ P.T, U @ Sigma @ np.linalg.inv(U))"
+    "np.all(np.isclose(P @ H @ A @ H.T @ P.T, U @ Sigma @ np.linalg.inv(U)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dalej: zastanawiamy się, jak odzyskać wektory i wartości własne $HAH^T$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Utilde = P.T @ U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(np.isclose(H @ A @ H.T, Utilde @ Sigma @ np.linalg.inv(Utilde)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "W ten sposób mamy wektory i wartości własne $HAH^T$: wektory to kolumny $\\tilde{U}$, wartości to elementy na diagonali $\\Sigma$.\n",
+    "\n",
+    "Teraz wystarczy zauważyć, że macierz $\\bar{U} := H^T\\tilde{U}$ przechowuje wektory własne $A$, zaś macierz $\\Sigma$ przechowuje wartości własne."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ubar = H.T @ Utilde"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sprawdzamy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(np.isclose(A, Ubar @ Sigma @ np.linalg.inv(Ubar)))"
    ]
   }
  ],
