Dodano notatnik.ipynb

--- a/Pomysł 14.06/szostemysli.ipynb
+++ b/Pomysł 14.06/szostemysli.ipynb
@@ -176,6 +176,13 @@
    "source": [
     "np.all(np.isclose(A, Ubar @ Sigma @ np.linalg.inv(Ubar)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teraz, mając rozkład $A = \\bar{U} \\Sigma \\bar{U}^{-1}$, trzeba się zastanowić co dalej -- jak"
+   ]
   }
  ],
  "metadata": {
