SVD dla bidiagonalnej działa w całości dobrze

--- a/Całość/testy.ipynb
+++ b/Całość/testy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "       [0.        , 0.        , 0.        , 0.        , 0.4236548 ]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -60,33 +60,26 @@
       "       [0.        , 0.        , 0.        , 0.54488318, 0.96366276],\n",
       "       [0.        , 0.        , 0.        , 0.        , 0.4236548 ]])\n",
       "Krok 3... Ok!\n",
-      "Sprawdzamy rozkład Pd * M^T * M * Pd^T = Ubar * Sigma * Ubar^(-1)... Ok!\n",
-      "U1=array([[-0.71297387, -0.70119061],\n",
-      "       [-0.70119061,  0.71297387]])\n",
-      "U2=array([[ 0.94559116, -0.32535729],\n",
-      "       [ 0.32535729,  0.94559116]])\n",
-      "\n",
-      "V1T=array([[-0.3613342 , -0.88834382, -0.28334228],\n",
-      "       [-0.77169161,  0.11433601,  0.62563514],\n",
-      "       [ 0.52338289, -0.44471623,  0.72684099]])\n",
-      "V2T=array([[ 0.44083771,  0.89758683],\n",
-      "       [-0.89758683,  0.44083771]])\n",
-      "\n"
+      "Sprawdzamy rozkład M^T * M = Ubar * Sigma * Ubar^(-1)... Ok!\n",
+      "mysvd=array([[ 5.48813504e-01,  6.45894113e-01,  2.14731987e-12,\n",
+      "         4.24537577e-13, -2.70022135e-12],\n",
+      "       [ 7.35385240e-13,  7.15189366e-01,  4.37587211e-01,\n",
+      "        -1.13566541e-12, -1.79572542e-12],\n",
+      "       [-9.98526493e-12,  1.10745557e-11,  6.02763376e-01,\n",
+      "         8.91773001e-01, -9.44990610e-12],\n",
+      "       [-1.89874698e-12, -2.05719797e-12, -2.00659115e-12,\n",
+      "         5.44883183e-01,  9.63662761e-01],\n",
+      "       [ 8.21133101e-13, -2.46881743e-12,  2.29647194e-12,\n",
+      "        -6.04168846e-12,  4.23654799e-01]])\n"
      ]
     }
    ],
    "source": [
     "print(f\"Zanim wejdziemy do DACSVD:\\n{B=}\")\n",
     "U, Lambda, VT = DACSVD(B)\n",
-    "mysvd = U @ np.diag(Lambda) @ VT"
+    "mysvd = U @ np.diag(Lambda) @ VT\n",
+    "print(f\"{mysvd=}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
