--- a/Całość/notatnik.ipynb
+++ b/Całość/notatnik.ipynb
@@ -23,119 +23,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np"
+    "# SVD dla bidiagonalnej działa!\n",
+    "Teraz trzeba nauczyć się sprowadzać dowolną macierz $A$ do postaci bidiagonalnej"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., 1., 0.],\n",
-       "       [0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1.]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "N = 5\n",
-    "m = 3\n",
-    "Pm = np.eye(N)\n",
-    "\n",
-    "Pm[[0, m], :] = Pm[[m, 0], :]\n",
-    "\n",
-    "Pm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1,  2,  3],\n",
-       "       [ 4,  5,  6],\n",
-       "       [ 5,  6,  7],\n",
-       "       [ 8,  9, 10],\n",
-       "       [11, 12, 13]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A = np.array([[1, 2, 3],\n",
-    "              [4, 5, 6],\n",
-    "              [5, 6, 7],\n",
-    "              [8, 9, 10],\n",
-    "              [11, 12, 13]])\n",
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 8.,  9., 10.],\n",
-       "       [ 4.,  5.,  6.],\n",
-       "       [ 5.,  6.,  7.],\n",
-       "       [ 1.,  2.,  3.],\n",
-       "       [11., 12., 13.]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Pm @ A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed(0)\n",
-    "K = 5\n",
-    "q = np.random.rand(K) # główna diagonala\n",
-    "r = np.random.rand(K) # naddiagonala\n",
-    "B1 = np.hstack((np.zeros((K, 1)), np.diag(q)))\n",
-    "B2 = np.hstack((np.diag(r), np.zeros((K, 1))))\n",
-    "B = B1 + B2\n",
-    "# print(f\"{B1=}\\n{B2=}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
